fix css on mobile

--- a/src/components/Banner/style.scss
+++ b/src/components/Banner/style.scss
@@ -1,3 +1,4 @@
+@import '../../assets/responsive/index.scss';
 .banner {
     height: 240px;
     background-size: cover;
@@ -15,5 +16,9 @@
         font-size: 2rem;
         font-weight: 500;
         letter-spacing: 2px;
+        text-align: center;
+        @include mobile {
+            font-size: 1.5rem;
+        }
     }
 }
