--- a/src/components/Product/style.scss
+++ b/src/components/Product/style.scss
@@ -6,16 +6,23 @@
     box-shadow: 0px 2px 2px rgba($color: #000000, $alpha: 0.2);
     
     &:hover &__image {
-        background-size: 120%;
+        transform: scale(1.2);
+    }
+
+    &__image__box {
+        height: 200px;
+        overflow: hidden;
     }
 
     &__image {
-        padding-top: 200px;
-        background-size: 100%;
+        height: 100%;
+        background-size: contain;
         background-position: center;
         background-repeat: no-repeat;
 
         transition: all linear 0.25s;
+
+        
     }
 
     &__name {
